# Generic-Shell-ToolBox-CLI

./: README.md  pyproject.toml
